
ext {
    tomcatVersion = "8.0.32"
    jstlVersion = "1.2"
    groovyVersion = "2.4.4"
}

// required for spring boot to get spring dependencies from local maven
ext['spring.version'] = '4.3.0.BUILD-SNAPSHOT'

buildscript {
    repositories {
        mavenLocal()
        jcenter()
    }

    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.3.4.RELEASE")
    }
}

repositories {
    mavenLocal()
    jcenter()
}

apply plugin: 'idea'
apply plugin: 'groovy'
apply plugin: 'spring-boot'
apply plugin: 'war'

sourceCompatibility = "1.7"
targetCompatibility = "1.7"


dependencies {

    compile "org.codehaus.groovy:groovy-all:${groovyVersion}"

    compile ("org.springframework.boot:spring-boot-starter-logging")
    compile ("org.springframework.boot:spring-boot-autoconfigure")
    compile ("org.springframework.boot:spring-boot-starter-actuator")
    compile ("org.springframework.boot:spring-boot-starter-tomcat")
    compile ("org.springframework.boot:spring-boot-starter-web")


    compile ("org.apache.tomcat.embed:tomcat-embed-jasper:${tomcatVersion}")
    compile ("javax.servlet:jstl:${jstlVersion}")
}

configure([compileGroovy, compileTestGroovy]) {
    groovyOptions.fork(jvmArgs: ['-XX:MaxPermSize=512m'], memoryInitialSize: '128M', memoryMaximumSize: '1G')
    groovyOptions.encoding = "UTF-8"
    options.encoding = "UTF-8"
}

configure([compileJava, compileTestJava]) {
    options.deprecation = true
    options.debug = true
}


